# python-trading-game

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  Speckit-Instructions.md  pyproject.toml  test_app_timing.py  test_timing.py
.specify/memory/: constitution.md
specs/1-power-price-engine/: plan.md  spec.md  tasks.md
specs/1-power-price-engine/checklists/: requirements.md
src/: main.py
src/power_simulator/: __init__.py  engine.py  models.py  regimes.py
src/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_simulation.py
tests/unit/: __init__.py  test_engine.py  test_parameters.py
